# rag_poc

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/: langchain_setup.py  main.py  prompt.py
tests/: test_api.py
